--- a/about.css
+++ b/about.css
@@ -13,7 +13,7 @@ img{
     padding:8px;
 }
 button {
-    background-color: #EA4C89;
+    background-color: #5c4cea;
     border-radius: 8px;
     border-style: none;
     box-sizing: border-box;
